// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render ExpenseSummary with 1 expenses 1`] = `
<div>
  <h1>
    1
     
    expense
     totaling of 
    $2.35
  </h1>
</div>
`;

exports[`should correctly render ExpenseSummary with multiple expenses 1`] = `
<div>
  <h1>
    23
     
    expenses
     totaling of 
    $2,353,242.34
  </h1>
</div>
`;
